# personal_finance

./: .gitignore  Makefile  README.md
.data/: init.sql
.data/postgres/data/: postmaster.pid
.data/postgres/data/base/1/: 2619  2696  2840
.data/postgres/data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13510  13510_fsm  13510_vm  13514  13515  13515_fsm  13515_vm  13519  13520  13520_fsm  13520_vm  13524  13525  13525_fsm  13525_vm  13529  16385  16396  174  175  2187  2224  2228  2337  2579  2600  (+210 more)
.data/postgres/data/base/4/: 2619
.data/postgres/data/base/5/: pg_internal.init
.data/postgres/data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
.devcontainer/: docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
data_eng/: main.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  vite.config.ts
frontend/src/: main.ts  style.css
