# /home/jim/Documents/finance_tracker/backend/Cargo.toml
[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Using arrow-adbc crates for database interaction
adbc-core = "0.12"
adbc-driver-manager = "0.12"