# /home/jim/Documents/finance_tracker/backend/Cargo.toml
[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
# Downgrade to 0.3 to match sqlx 0.7's internal dependency
bigdecimal = { version = "0.3", features = ["serde"] }